PTSBE: Pre-Trajectory Sampling with Batch Execution (#3995)
Adding Pre-Trajectory Sampling with Batch Execution (PTSBE) for noisy
circuit sampling. Noise is pre-sampled into trajectories, circuits are
run in batches per trajectory and results are aggregated. This enables
noisy sampling on simulators.

Refer paper: https://arxiv.org/abs/2504.16297 and
https://arxiv.org/pdf/2508.04880

**Features**

*   **PTSBE pipeline**
* Trace capture -> noise-site extraction -> trajectory generation
(strategies: probabilistic, exhaustive, ordered, conditional) -> shot
allocation (PROPORTIONAL (default), UNIFORM, LOW_WEIGHT_BIAS,
HIGH_WEIGHT_BIAS) -> batch execution -> result aggregation.
*   **Dedicated API**
    *   C++
        *   cudaq::ptsbe::sample()
        *   cudaq::ptsbe::sample_async()
    *   Python
        *   cudaq.ptsbe.sample()
        *   cudaq.ptsbe.sample_async()
*   **Noise sources**
    *   Gate-based noise via NoiseModel
        *   add_channel, add_all_qubit_channel
    *   Inline
        *   cudaq.apply_noise(...) in the kernel
        *   noise_model is optional when using apply_noise
*   **Execution data (optional)**
* Circuit structure (Gate/Noise/Measurement), trajectory specs, and
per-trajectory counts via
return_execution_data=True (Python) or
options.ptsbe.return_execution_data (C++)
*   **Trace and apply_noise**
* Common Trace extended with instruction type enum (Gate / Noise) and
appendNoiseInstruction
       *   NVQIR records apply_noise in tracer mode
* PTSBE skips Noise in gate conversion and resolves channels in the
noise extractor

**Limitations**

*   Simulator-only (no remote)
* No mid-circuit measurements or conditional feedback (deterministic
gate sequence only)
*   Noise channels must be unitary mixtures (for trajectory sampling)

Co-authored-by: @taylorpatti, @1tnguyen, @taalexander

---------

Signed-off-by: Sachin Pisal <spisal@nvidia.com>
Signed-off-by: Thomas Alexander <talexander@nvidia.com>
Signed-off-by: Luca Mondada <luca@mondada.

--- a/python/extension/CMakeLists.txt
+++ b/python/extension/CMakeLists.txt
@@ -57,6 +57,7 @@ declare_mlir_python_extension(CUDAQuantumPythonSources.Extension
     ../runtime/cudaq/algorithms/py_observe_async.cpp
     ../runtime/cudaq/algorithms/py_optimizer.cpp
     ../runtime/cudaq/algorithms/py_sample_async.cpp
+    ../runtime/cudaq/algorithms/py_sample_ptsbe.cpp
     ../runtime/cudaq/algorithms/py_resource_count.cpp
     ../runtime/cudaq/algorithms/py_run.cpp
     ../../runtime/cudaq/algorithms/run.cpp      # Common Python and C++ implementation of run
