Make installer cudaq package self-contained (and non-root installable) (#3993)
<!--
Thanks for helping us improve CUDA-Q!

⚠️ The pull request title should be concise and understandable for all.
⚠️ If your pull request fixes an open issue, please link to the issue.

Checklist:
- [ ] I have added tests to cover my changes.
- [ ] I have updated the documentation accordingly.
- [ ] I have read the CONTRIBUTING document.
-->

### Description
Closes #1075. I ran into a series of issues with the macOS installer
when attempting to locally install the Github artifact. Ultimately the
core issue was that the dependencies were being installed in a variety
of locations many of which were not macOS friendly. Additionally, the
installer was picking up the Cmake installer paths directly which was
fine for the docker environment where the package was built in root but
not in the case of macOS where the `runner` user is used to build cudaq
and build the wheel.

The fix I propose after discussing with @mitchdz is to consolidate all
cudaq dependencies in the installer into the `cudaq` directory. Then
make this directory optionally installable to a non-root locations
through `--installpath <path>` argument. By default it will continue to
be installed to the existing install location. Documentation is updated
to reflect this. The only (small) downside to this approach is that on
the offchance users are linking or using the cuquantum/llvm packages
shipped with cudaq (which is not recommended) they will have to update
their paths.

I also fixed a bug in set_env that was causing it to pollute
environments by appending to the path multiple times (everytime the
shell was sourced).

Change list:
- Merged installer layout: LLVM tools, clang resource dir, and CUDA libs
are staged directly into the CUDA-Q prefix (bin/, lib/, include/) rather
than separate subdirectories. nvq++ detects the merged layout at runtime
and falls back to the build-tree LLVM path when running from a dev
build.
- `--inst

--- a/tools/nvqpp/nvq++.in
+++ b/tools/nvqpp/nvq++.in
@@ -280,9 +280,17 @@ install_dir="$(
 	cd -- "$(dirname "$0")/.." >/dev/null 2>&1
 	pwd -P
 )"
-llvm_install_dir="@LLVM_BINARY_DIR@"
 llvm_version="@LLVM_VERSION_MAJOR@.@LLVM_VERSION_MINOR@.@LLVM_VERSION_PATCH@"
 llvm_suffix="@NVQPP_LLVM_EXECUTABLE_SUFFIX@"
+# Locate the LLVM toolchain. The installer bundles LLVM under lib/llvm/;
+# fall back to a flat layout or the build-time LLVM directory.
+if [ -x "${install_dir}/lib/llvm/bin/clang++${llvm_suffix}" ]; then
+	llvm_install_dir="${install_dir}/lib/llvm"
+elif [ -x "${install_dir}/bin/clang++${llvm_suffix}" ]; then
+	llvm_install_dir="${install_dir}"
+else
+	llvm_install_dir="@LLVM_BINARY_DIR@"
+fi
 
 INCLUDES="@CUDAQ_CXX_NVQPP_INCLUDE_STR@"
 # Full version string of this nvq++ script.
