* Fix the mock server set up to enable C++ and Python tests * Use the next port to avoid clashes * Specify device and project while setting target * Build fix for logger * Minor updates to satist pre-commit checks
Signed-off-by: Pradnya Khalate <pkhalate@nvidia.com>

--- a/unittests/backends/tii/CMakeLists.txt
+++ b/unittests/backends/tii/CMakeLists.txt
@@ -9,7 +9,8 @@
 add_backend_unittest_executable(test_tii 
   SOURCES TiiTester.cpp
   BACKEND tii
+  BACKEND_CONFIG "tii emulate=false"
   )
 
-configure_file("TiiStartServerAndTest.sh.in" "${CMAKE_BINARY_DIR}/unittests/backends/tii/TiiStartServerAndTest.sh" @ONLY)
-add_test(NAME tii-tests COMMAND bash TiiStartServerAndTest.sh WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/unittests/backends/tii/)
+configure_file(TiiStartServerAndTest.sh.in TiiStartServerAndTest.sh @ONLY)
+add_test(NAME tii-tests COMMAND bash TiiStartServerAndTest.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
