applied suggestions from code review
Signed-off-by: GabrielePalazzo <73099233+GabrielePalazzo@users.noreply.github.com>

--- a/runtime/cudaq/platform/default/rest/helpers/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/rest/helpers/CMakeLists.txt
@@ -21,4 +21,6 @@ add_subdirectory(quantinuum)
 if (CUDAQ_ENABLE_QUANTUM_MACHINES_BACKEND)
   add_subdirectory(quantum_machines)
 endif()
-add_subdirectory(tii)
+if(CUDAQ_ENABLE_TII_BACKEND)
+  add_subdirectory(tii)
+endif()
