[core] Consolidate all the various QIR verifiers into 1 library.
QIR verification needs to happen at the very tail end of code generation
to determine if the original source code actually conforms with the
miscellaneous limitations and restrictions of the QIR specification.

This PR collects all the various random places that these verifications
are done and consolidates them into one library.

Signed-off-by: Eric Schweitz <eschweitz@nvidia.com>

--- a/lib/Verifier/CMakeLists.txt
+++ b/lib/Verifier/CMakeLists.txt
@@ -1,15 +1,15 @@
 # ============================================================================ #
-# Copyright (c) 2022 - 2026 NVIDIA Corporation & Affiliates.                   #
+# Copyright (c) 2026 NVIDIA Corporation & Affiliates.                          #
 # All rights reserved.                                                         #
 #                                                                              #
 # This source code and the accompanying materials are made available under     #
 # the terms of the Apache License 2.0 which accompanies this distribution.     #
 # ============================================================================ #
 
-include(HandleLLVMOptions)
-if (NOT CUDAQ_DISABLE_CPP_FRONTEND)
-  add_subdirectory(Frontend)
-endif()
-add_subdirectory(Optimizer)
-add_subdirectory(Support)
-add_subdirectory(Verifier)
+add_mlir_library(cudaq-qir-verifier
+  NVQIRCalls.cpp
+
+  LINK_LIBS PUBLIC
+    MLIRLLVMDialect
+    MLIRIR
+)
