Features/scaleway qaas (#3781)
### Description
- Integration work to support access to Scaleway Quantum as a Service
(QaaS) - service close to AWS Braket
- Allow access to CUDA-Q runtime, Aer, IQM (physical and emulator) et
AQT (physical and emulator) backends
- Add relative documentation
- Add python test suite
- Add mock server (need qio package installation to be fully functional)
- Update CI

---------

Signed-off-by: Valentin Macheret <vmacheret@scaleway.com>
Signed-off-by: Pradnya Khalate <pkhalate@nvidia.com>
Co-authored-by: Pradnya Khalate <148914294+khalatepradnya@users.noreply.github.com>
Co-authored-by: Pradnya Khalate <pkhalate@nvidia.com>

--- a/.github/workflows/test_in_devenv.yml
+++ b/.github/workflows/test_in_devenv.yml
@@ -97,7 +97,7 @@ jobs:
           run: |
             set -euo pipefail
             cd $CUDAQ_REPO_ROOT
-            python3 -m pip install iqm-client==28.0.0 --break-system-packages
+            python3 -m pip install iqm-client==28.0.0 qio~=0.1.33 --break-system-packages
             bash scripts/run_tests.sh -v
 
       - name: Test CUDA Quantum MPI Plugin Activation
@@ -234,7 +234,7 @@ jobs:
             python3 -m venv --system-site-packages "$VENV_DIR"
             . "$VENV_DIR/bin/activate"
 
-            pip install iqm-client==28.0.0
+            pip install iqm-client==28.0.0 qio~=0.1.33
             pip install . -vvv
             pyinstall_status=$?
             if [ ! $pyinstall_status -eq 0 ]; then
