--- a/runtime/cudaq/platform/default/rest/helpers/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/rest/helpers/CMakeLists.txt
@@ -21,3 +21,6 @@ add_subdirectory(quantinuum)
 if (CUDAQ_ENABLE_QUANTUM_MACHINES_BACKEND)
   add_subdirectory(quantum_machines)
 endif()
+if (CUDAQ_ENABLE_SCALEWAY_BACKEND)
+  add_subdirectory(scaleway)
+endif()
